--- a/.github/workflows/123.yml
+++ b/.github/workflows/123.yml
@@ -1,4 +1,14 @@
-name: 123
+#
+# Copyright (c) 2019-2020 P3TERX <https://p3terx.com>
+#
+# This is free software, licensed under the MIT License.
+# See /LICENSE for more information.
+#
+# https://github.com/P3TERX/Actions-OpenWrt
+# Description: Build OpenWrt using GitHub Actions
+#
+
+name: Build rax3000m_256m
 
 on:
   repository_dispatch:
@@ -15,7 +25,7 @@ env:
   REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
   REPO_BRANCH: openwrt-21.02
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: RAX3000M-123.config
+  CONFIG_FILE: 123.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   TZ: Asia/Shanghai
@@ -136,4 +146,4 @@ jobs:
         body: |
           # 未测试×
           
-          IP: 192.168.5.1 | Password: none
+          IP: 192.168.1.1 | Password: none
