--- a/222.config
+++ b/222.config
@@ -1,5 +1,5 @@
 #
-# Automatically generated file; DO NOT EDIT.
+# Automatically generated file; DO NOT EDIT.--chushi+shangdian
 # OpenWrt Configuration
 #
 CONFIG_MODULES=y
